# gblab

./: .gitignore  Cargo.toml  README.md
crates/gb-core/: Cargo.toml
crates/gb-core/examples/: screenshot.rs
crates/gb-core/src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  joypad.rs  lib.rs  ppu.rs  timer.rs
crates/gb-core/tests/: blargg.rs
crates/gba-core/: Cargo.toml
crates/gba-core/examples/: screenshot.rs
crates/gba-core/src/: apu.rs  bus.rs  dma.rs  lib.rs  ppu.rs  timer.rs
crates/gba-core/src/cpu/: alu.rs  arm_block.rs  arm_mem.rs  arm_misc.rs  bios.rs  mod.rs  thumb_alu.rs  thumb_branch.rs  thumb_mem.rs
crates/gba-core/tests/: jsmolka.rs
crates/gblab/: Cargo.toml
crates/gblab-desktop/: Cargo.toml
crates/gblab-desktop/src/: main.rs
crates/gblab/java/com/kingsofalchemy/gblab/: BleController.java
crates/gblab/src/: app.rs  audio.rs  ble.rs  core.rs  input.rs  insets.rs  jvm.rs  lib.rs
firmware/gblab-pad-fw/: Cargo.toml
firmware/gblab-pad-fw/.cargo/: config.toml
firmware/gblab-pad-fw/src/: main.rs
scripts/: fetch-test-roms.sh
