[package]
name = "gblab-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GBLab desktop launcher"

[[bin]]
name = "gblab"
path = "src/main.rs"

[dependencies]
gblab = { path = "../gblab" }
eframe = { version = "0.35", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "wayland",
    "x11",
] }
env_logger = "0.11"
