[package]
name = "gblab"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GBLab: Game Boy emulator frontend for desktop and Android"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gblab"
path = "src/main.rs"

[dependencies]
gb-core = { path = "../gb-core" }
egui = "0.35"
log = "0.4"
cpal = "0.18"

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.35", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "wayland",
    "x11",
] }
env_logger = "0.11"
rfd = "0.17"

[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.35", default-features = false, features = [
    "android-native-activity",
    "wgpu",
    "default_fonts",
] }
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.15"

[package.metadata.android]
package = "com.kingsofalchemy.gblab"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35

[package.metadata.android.application]
label = "GBLab"

[[package.metadata.android.uses_permission]]
name = "android.permission.BLUETOOTH_SCAN"

[[package.metadata.android.uses_permission]]
name = "android.permission.BLUETOOTH_CONNECT"

[[package.metadata.android.uses_permission]]
name = "android.permission.VIBRATE"

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"
config_changes = "orientation|keyboardHidden|screenSize|screenLayout|density"

[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
value = "gblab"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]
