[package]
name = "gblab-pad-fw"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "GBLab controller firmware: BLE GATT gamepad on ESP32-H2"

[dependencies]
embassy-executor = "0.10.0"
embassy-futures = "0.1"
embassy-sync = "0.7"
embassy-time = "0.5"
esp-hal = { version = "1.1.1", features = ["esp32h2", "unstable"] }
esp-alloc = "0.10.0"
esp-backtrace = { version = "0.19.0", features = ["esp32h2", "panic-handler", "println"] }
esp-println = { version = "0.17.0", features = ["esp32h2", "log-04"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32h2"] }
esp-radio = { version = "0.18.0", features = ["esp32h2", "ble", "log-04", "unstable"] }
esp-rtos = { version = "0.3.0", features = ["esp32h2", "embassy", "esp-radio", "esp-alloc", "log-04"] }
# trouble-host 0.7 needs bt-hci 0.9; esp-radio 0.18 implements bt-hci 0.8, so stay on 0.6.
trouble-host = { version = "0.6.0", features = ["default-packet-pool-mtu-255"] }
static_cell = "2.1"
log = "0.4"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
debug = true

[workspace]
